# Heterogeneous-Global-Router

./: .gitignore  CMakeLists.txt  Makefile  P1.tar  P2.tar  P3.tar  README.md  a.out  output  pinDist.py  project.py  wireDist.py
Report/: report.md
benchmarks/: input
src/: Basic_Net.cpp  Basic_Net.h  Basic_Point.cpp  Basic_Point.h  Basic_Route.cpp  Basic_Route.h  Basic_RoutingInst.cpp  Basic_RoutingInst.h  Basic_Segment.cpp  Basic_Segment.h  Basic_Solver.h  Error.h  Global.h  Interface.cpp  Interface.h  Logic_Astar.cpp  Logic_Astar.h  Logic_HGrid.cpp  Logic_HGrid.h  Logic_RoutingInst.cpp  Logic_RoutingInst.h  Logic_SegTree.cpp  Logic_SegTree.h  Logic_Timer.cpp  Logic_Timer.h  Logic_UnionFind.cpp  Logic_UnionFind.h  Logic_rmst.cpp  Logic_rmst.h  Net.cpp  Net.h  Point.cpp  Point.h  Route.cpp  Route.h  Solver.cpp  Solver.h  Solver_Weighted.cpp  Solver_Weighted.h  Solver_rmst.cpp  (+13 more)
src/base/: base.cpp  base.h  hgrid.cpp  hgrid.h  point.cpp  point.h  route.h
src/util/: RMST.cpp  RMST.h  fileIO.cpp  fileio.cpp  fileio.h  solver.cpp  solver.h  util.cpp  util.h
testing/: batch.sh  evaluate.sh  route.sh  test.sh  util.sh
